Atualização do projeto - Finalização

--- a/instagram.html
+++ b/instagram.html
@@ -4,20 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            height: 100vh;
-            width: 100vw;
-            background: black url('./images/tela-instagram.jpg') no-repeat top center;
-            background-size: cover;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/social.css">
 </head>
 <body>
-    
+    <img src="./images/tela-instagram.jpg" alt="Twitter">
+    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE</a>
 </body>
 </html>
