--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="./home.html" target="nm_tela"><img class="icones" src="./images/logo-home.jpg" alt="Home"></a>
-            <a href="./instagram.html" target="nm_tela"><img class="icones" src="./images/logo-instagram.jpg" alt="Instagram"></a>
-            <a href="./twitter.html" target="nm_tela"><img class="icones" src="./images/logo-twitter.jpg" alt="Twitter"></a>
-            <a href="./youtube.html" target="nm_tela"><img class="icones" src="./images/logo-youtube.jpg" alt="YouTube"></a>
-            <a href="./github.html" target="nm_tela"><img class="icones" src="./images/logo-github.jpg" alt="GitHub"></a>
-            <a href="./facebook.html" target="nm_tela"><img class="icones" src="./images/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="./home.html" target="nm_tela"><img src="./images/logo-home.jpg" alt="Home"></a><br>
+            <a href="./instagram.html" target="nm_tela"><img src="./images/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="./twitter.html" target="nm_tela"><img src="./images/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="./youtube.html" target="nm_tela"><img src="./images/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="./github.html" target="nm_tela"><img src="./images/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="./facebook.html" target="nm_tela"><img src="./images/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
