--- a/twitter.html
+++ b/twitter.html
@@ -4,20 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            height: 100vh;
-            width: 100vw;
-            background: black url('./images/tela-twitter.jpg') no-repeat top center;
-            background-size: cover;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/social.css">
 </head>
 <body>
-    
+    <img src="./images/tela-twitter.jpg" alt="Twitter">
+    <a href="https://www.twitter.com" target="_blank">ACESSE</a>
 </body>
 </html>
